--- a/appspec.yaml
+++ b/appspec.yaml
@@ -4,6 +4,9 @@ files:
   - source: /
     destination: /var/www/html
 hooks:
+ApplicationStop:
+    - location: .scripts/stop_server.sh
+      timeout: 300
   BeforeInstall:
     - location: .scripts/install_dependencies.sh
       timeout: 300
