--- a/appspec.yml
+++ b/appspec.yml
@@ -5,19 +5,15 @@ files:
     destination: /var/www/html
 hooks:
   BeforeInstall:
-    - location: .scripts/install_dependencies.sh
+    - location: .script/install_dependencies.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: .scripts/install_dependencies01.sh
+    - location: .script/install_dependencies01.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: .scripts/start_server.sh
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: .scripts/stop_server.sh
+    - location: .script/start_server.sh
       timeout: 300
       runas: root
 
