--- a/appspec.yml
+++ b/appspec.yml
@@ -5,15 +5,15 @@ files:
     destination: /var/www/html
 hooks:
   BeforeInstall:
-    - location: .script/install_dependencies.sh
+    - location: script/install_dependencies.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: .script/install_dependencies01.sh
+    - location: script/install_dependencies01.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: .script/start_server.sh
+    - location: script/start_server.sh
       timeout: 300
       runas: root
 
