--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@
 version: 0.0
 os: linux
 files:
-  - source: script/newcode
+  - source: script/index.html
     destination: /var/www/html
 hooks:
   BeforeInstall:
