--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,7 @@ os: linux
 files:
   - source: script/index.html
     destination: /var/www/html
+    overwrite: true
 hooks:
   BeforeInstall:
     - location: script/install_dependencies.sh
