--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,18 +9,14 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
      # Step 1
-      - name: Configure AWS credentials
+      - name: AWS CodeDeploy
         uses: sourcetoad/aws-codedeploy-action@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-     # Step 2
-      - name: Create CodeDeploy Deployment
-        id: deploy
-        run: |
-          aws deploy create-deployment \
-            --application-name web_app \
-            --deployment-group-name web_app_deploymet_group \
-            --deployment-config-name CodeDeployDefault.OneAtATime \
-            --github-location repository=${{ github.repository }},commitId=${{ github.sha }} --ignore-application-stop-failures
+          codedeploy_name: web_app
+          codedeploy_group: web_app_deploymet_group
+          codedeploy_register_only: true
+          max_polling_iterations: 60
+          directory: ./tmp
