--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,28 @@
-name: CI
-
-on: [push]
+name: CI/CD Pipeline
+on:
+  push:
+    branches: [ master ]
 
 jobs:
-  phpunit:
+  continuous-deployment:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
-      - uses: actions/checkout@v1
+     # Step 1
+      - name: AWS CodeDeploy
+        uses: sourcetoad/aws-codedeploy-action@v1
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ap-south-1
+          codedeploy_name: web_app
+          codedeploy_group: web_app_deploymet_group
+          s3_bucket: codedeploy
+          s3_folder: artifacts
+          codedeploy_register_only: true
+          max_polling_iterations: 60
+          directory: ./
       - name: Setup Symfony
         run: |
           pwd
-          ls -la
+          ls -l
