--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           aws_region: ap-south-1
           codedeploy_name: web_app
           codedeploy_group: web_app_deploymet_group
-          s3_bucket: codedeploy
+          s3_bucket: cododeploy
           s3_folder: artifacts
           codedeploy_register_only: true
           max_polling_iterations: 60
