--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
         run: |
           pwd
           ls -la
-      - name: AWS CodeDeploy
-        uses: sourcetoad/aws-codedeploy-action@v1
+      - name: Sourcetoad - AWS CodeDeploy for GitHub Actions
+        uses: sourcetoad/aws-codedeploy-action@v1.3.0
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
